--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron"
   ],
   "dependencies": {
+    "detect-speed": "^1.0.2",
     "electron-debug": "^1.0.0"
   },
   "devDependencies": {
